# pocketsmith-mcp-python

./: .coderabbit.yml  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Enhancing Documentation and OSS Hygiene.md  Justfile  README.md  SECURITY.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  tests.yml
docs/: GOOSE_INTEGRATION.md  mcp-inspector.md  next_steps.md
pocketsmith_mcp/: __main__.py  server.py
tests/: test_headers.py  test_inmemory_client.py  test_smoke.py  test_utils.py
