[project]
name = "pocketsmith-mcp-gpt-5"
version = "1.0.0"
description = "PocketSmith MCP server"
readme = "README.md"
authors = [
    { name = "Damien Storm", email = "damien.r.storm@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.1",
    "pre-commit>=4.2.0",
    "python-semantic-release==10.2.0",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ty.rules]
# Start conservative; escalate later as code matures
possibly-unresolved-reference = "warn"
division-by-zero = "error"

[tool.semantic_release]
# Use annotated tags like v1.2.3
tag_format = "v{version}"
# Default commit parser (Angular/Conventional Commits)
# commit_parser = "angular"
# Update the version field in pyproject.toml
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
# Configure default templates to generate CHANGELOG.md in Markdown
default_templates = { changelog_file = "CHANGELOG.md", output_format = "md" }

[tool.semantic_release.branches]
# Release from the main branch
main = { match = "main" }
